<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "ActivityPlay">]>

<resources>
    <string-array name="words_languages_keys" translatable="false">
        <item>en</item>
        <item>ru</item>
    </string-array>

    <string-array name="words_languages_values">
        <item>English</item>
        <item>Russian</item>
    </string-array>

    <string name="word_mask" translatable="false">*****</string>

    <string name="loading_dictionary_progress_title">Loading dictionary...</string>
    <!--Relates to colors-->
    <string-array name="color_names">
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Deep purple</item>
        <item>Indigo</item>
        <item>Blue</item>
        <item>Light blue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Light green</item>
        <item>Lime</item>
        <item>Yellow</item>
        <item>Amber</item>
        <item>Orange</item>
        <item>Deep orange</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Blue grey</item>
        <item>Black</item>
    </string-array>

    <array name="capitals">
        <item>Montgomery</item>
        <item>Juneau</item>
        <item>Phoenix</item>
        <item>Little Rock</item>
        <item>Sacramento</item>
        <item>Denver</item>
        <item>Hartford</item>
        <item>Dover</item>
        <item>Tallahassee</item>
        <item>Des Moines</item>
        <item>Cheyenne</item>
        <item>Olympia</item>
        <item>Montpelier</item>
        <item>Richmond</item>
        <item>Madison</item>
        <item>Honolulu</item>
        <item>Boise</item>
        <item>Atlanta</item>
        <item>Charleston</item>
        <item>Springfield</item>
        <item>Indianapolis</item>
        <item>Topeka</item>
        <item>Frankfort</item>
        <item>Baton Rouge</item>
        <item>Boston</item>
        <item>Paul</item>
        <item>Jackson</item>
        <item>Jefferson</item>
        <item>Lansing</item>
        <item>Helena</item>
        <item>Augusta</item>
        <item>Annapolis</item>
        <item>Lincoln</item>
        <item>Carson</item>
        <item>Concord</item>
        <item>Trenton</item>
        <item>Albany</item>
        <item>Santa Fe</item>
        <item>Concord</item>
        <item>Columbus</item>
        <item>Oklahoma</item>
        <item>Salem</item>
        <item>Harrisburg</item>
        <item>Providence</item>
        <item>Bismarck</item>
        <item>Raleigh</item>
        <item>Nashville</item>
        <item>Austin</item>
        <item>Pierre</item>
        <item>Columbia</item>
        <item>Salt Lake</item>
    </array>

    <string name="team_plays_round">Round %d - %s plays!</string>
    <string name="round_max_score">max score is %d</string>
    <string name="in_round_seconds_left">%d seconds left</string>
    <string name="round_score">Score %d</string>
    <string name="winner_team_title">%s wins!</string>
    <string name="team_name_with_position" translatable="false">%d. %s</string>
    <string name="delete_team_dialog_message">Do you want to delete team?</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_team_dialog_not_enough_teams">You can not delete team as at least two teams are required for game.</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="add_team">Add team</string>
    <string name="edit_team">Edit team</string>
    <string name="default_team_1_name">Watermelon</string>
    <string name="default_team_2_name">Strawberry</string>
    <string name="github_link" translatable="false">https://github.com/zatsepinvl/activity-play-android</string>
    <string name="email_intent_data" translatable="false">mailto:zatsepin.vl@gmail.com?subject=ActivityPlay Feedback</string>
    <string name="home_new_game">New game</string>
    <string name="home_continue">Continue</string>
    <string name="start_round">Start round</string>
    <string name="main_menu">Main menu</string>
    <string name="draw">Paint</string>
    <string name="finish_round">Finish round</string>
    <string name="skip_word">Skip word</string>
    <string name="next_word">Guessed</string>
    <string name="round_is_over">Round is over</string>
    <string name="total_score">Total score %d</string>
    <string name="done">Done</string>
    <string name="add_new">Add new</string>
    <string name="start_game">Start game</string>
    <string name="name">Name</string>
    <string name="i_am_filling_lucky">I\'am Filling lucky</string>
    <string name="color">Color</string>

    <string name="team_list">Team List</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="contact_me">Contact me</string>
    <string name="tutorial">Tutorial</string>

    <string name="slide_welcome_title">Welcome to &appname;</string>
    <string name="slide_welcome_description">Do you like funny parties or intellectual games? Can you explain word so that your friends guess it? Let’s try!</string>
    <string name="slide_participants_title">Step 1: Participants</string>
    <string name="slide_participants_description">Meet your friends and split into teams at least 2 members in each.</string>
    <string name="slide_teams_title">Step 2: Teams</string>
    <string name="slide_teams_description">Choose name and color of each team.</string>
    <string name="slide_game_title">Step 3: Game</string>
    <string name="slide_game_description">One player has to act pantomime or to describe or to paint a word given on a screen and the other members of his team have to find out what that should be.</string>
    <string name="slide_enjoy_title">Step 4</string>
    <string name="slide_enjoy_description">Play and Enjoy!</string>
    <string name="managed_to_guess_last_word">Managed to guess the last word?</string>
    <string name="last_word_yes">YES</string>
    <string name="last_word_no">No</string>
    <string name="game_action_draw">Paint</string>
    <string name="game_action_show">Pantomime</string>
    <string name="game_action_say">Describe</string>

    <string name="intro_finish_button">Get fun</string>
    <string name="intro_next_button">Next</string>
    <string name="next_game_action">Be ready to %s</string>


    <string name="settings">Settings</string>
    <string name="settings_general_title">General</string>
    <string name="settings_language">Language</string>
    <string name="settings_sound_effects_title">Sound effects</string>
    <string name="settings_vibration_title">Vibration</string>
    <string name="settings_fine_for_skipped_word_title">Skipped word fine</string>
    <string name="settings_fine_for_skipped_word_summary">If enabled, team will be fined 1 point for each skipped word</string>
    <string name="settings_round_time_seconds_title">Seconds per round</string>
    <string name="settings_max_score_title">Points for victory</string>
    <string name="settings_game_actions_title">Game actions</string>
    <string name="settings_action_say_title">Describe</string>
    <string name="settings_action_say_summary">You have to describe a word saying it`s definition without using root words</string>
    <string name="settings_action_draw_title">Paint</string>
    <string name="settings_action_draw_summary">You have to explain a word drawing it`s definition without using letters and digits</string>
    <string name="settings_action_show_title">Pantomime</string>
    <string name="settings_action_show_summary">You have to explain a word using gestures and body language only</string>
    <string name="settings_dialog_one_action_required">You can not disable this action. At least one enabled action is required.</string>
    <string name="home_support">Support the developer by watching an ad</string>
    <string name="ad_error_check_internet">Please, check your Internet connection and try again.</string>
    <string name="ad_error_try_later">Please, try again later</string>
    <string name="error">Error</string>
    <string name="ad_thank_you">Thank You!</string>
    <string name="ad_just_a_second">Just a second…</string>
    <string name="round_is_over_helper">Check whether everything is counted right:</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="join_game">Join game</string>
    <string name="create_new_game">Create new game</string>

</resources>
