<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="gameSetupViewModel"
            type="com.zatsepinvl.activityplay.gamesetup.viewmodel.GameSetupViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">

                <com.zatsepinvl.activityplay.android.view.Button
                    android:id="@+id/teamListBackButton"
                    style="@style/Widget.ActivityPlay.Button.OutlinedButton.Back"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical" />

                <TextView
                    style="@style/Widget.ActivityPlay.TextView.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/team_list" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/teamList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                tools:listitem="@layout/view_team_list_item" />

            <com.zatsepinvl.activityplay.android.view.Button
                android:id="@+id/teamListAddTeamButton"
                style="@style/Widget.ActivityPlay.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:src="@drawable/ic_add_white_24dp"
                android:text="@string/add_new"
                app:icon="@drawable/ic_add_white_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <com.zatsepinvl.activityplay.android.view.Button
                android:id="@+id/teamListSettingsButton"
                style="@style/Widget.ActivityPlay.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/settings" />

            <com.zatsepinvl.activityplay.android.view.Button
                android:id="@+id/teamListStartNewGameButton"
                style="@style/Widget.ActivityPlay.Button.OutlinedButton"
                android:onClick="@{() -> gameSetupViewModel.finishGameSetup()}"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/start_game" />
        </LinearLayout>

    </FrameLayout>
</layout>
