<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.zatsepinvl.activityplay.core.model.GameAction" />

        <import type="android.view.View" />

        <variable
            name="gameViewmodel"
            type="com.zatsepinvl.activityplay.game.viewmodel.GameViewModel" />

        <variable
            name="uiViewmodel"
            type="com.zatsepinvl.activityplay.game.viewmodel.RoundUiViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gameFrameRemainingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@{@string/in_round_seconds_left(gameViewmodel.remainingTimeSeconds)}"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:hint="10 seonds left" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/roundInActionImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@{gameViewmodel.actionDrawable}"
                    tools:src="@drawable/theater" />

                <TextView
                    android:id="@+id/gameFrameAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@{gameViewmodel.actionLocalName}"
                    android:textSize="26sp"
                    tools:hint="Action" />
            </LinearLayout>

            <TextView
                android:id="@+id/gameFrameWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableBottom="@{uiViewmodel.isWordHidden() ? @drawable/ic_visibility_black_24dp : @drawable/ic_visibility_off_black_24dp}"
                android:onClick="@{() -> uiViewmodel.toggleWordVisibility()}"
                android:text="@{uiViewmodel.isWordHidden() ? @string/word_mask : gameViewmodel.currentTask.word.value}"
                android:textAlignment="center"
                android:textSize="40sp"
                tools:hint="Word" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_marginTop="20dp"
                android:text="@{@string/round_score(gameViewmodel.currentTeamRoundScore)}"
                android:textAlignment="center"
                android:textSize="18sp"
                tools:hint="10" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gameFrameFinishButton"
            style="@style/Widget.ActivityPlay.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="@{() -> gameViewmodel.finishMainPart()}"
            android:text="@string/finish_round"
            android:textColor="@{gameViewmodel.currentTeam.color}"
            app:icon="@drawable/ic_stop_black_24dp"
            app:iconTint="@{gameViewmodel.currentTeam.color}"
            app:rippleColor="@{gameViewmodel.currentTeam.color}"
            app:strokeColor="@{gameViewmodel.currentTeam.color}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <com.zatsepinvl.activityplay.android.view.Button
                android:id="@+id/gameFrameDrawButton"
                style="@style/Widget.ActivityPlay.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:text="@string/draw"
                android:visibility="@{gameViewmodel.currentTask.action == GameAction.DRAW ? View.VISIBLE : View.INVISIBLE}"
                app:color="@{gameViewmodel.currentTeam.color}"
                app:icon="@drawable/ic_format_paint_black_24dp"
                app:iconGravity="textStart"
                app:iconPadding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.zatsepinvl.activityplay.android.view.Button
                    android:id="@+id/gameFrameSkipButton"
                    style="@style/Widget.ActivityPlay.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> gameViewmodel.failTask()}"
                    android:text="@string/skip_word"
                    app:color="@color/md_grey_600" />

                <com.zatsepinvl.activityplay.android.view.Button
                    android:id="@+id/gameFrameDoneButton"
                    style="@style/Widget.ActivityPlay.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> gameViewmodel.completeTask()}"
                    android:text="@string/next_word"
                    app:color="@{gameViewmodel.currentTeam.color}" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>